--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <li>𝙲𝚘𝚘𝚔𝚒𝚗𝚐🍜</li>
 </ul>
 
-<img src="https://img9.doubanio.com/view/photo/l/public/p2196652087.jpg" alt="女孩的友谊">
+<img src="p2196652087.jpg" alt="女孩的友谊">
 
-<strong><p><a href="https://github.com/The-Run-Philosophy-Organization/run">润学</a></p></em>
-<a href="list of movies.html">list of movies</a>
+<strong><p><a href="https://github.com/The-Run-Philosophy-Organization/run">🏃润学</a></p></em>
+<a href="list of movies.html">🎬list of movies</a>
 
 </Table>
 
